Change the question 3 and add references.

--- a/Data_Analyst_ND_Project0.ipynb
+++ b/Data_Analyst_ND_Project0.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Male; Junior college students or primary school pupils ; tested with chopsticks lengths of 180, 210, 240, 270, 300, and 330 mm ; using the chopticks to pick and place peanuts in a cup."
+    "Gender (male) and age (Junior college students or primary school pupils)"
    ]
   },
   {
