--- a/Data_Analyst_ND_Project0.ipynb
+++ b/Data_Analyst_ND_Project0.ipynb
@@ -853,9 +853,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "####9. Conclusion\n",
     "The P value is great than 0.05. Therefore, we could conclude that the means of the food punching efficiency were not significantly different. \n",
     "\n",
     "It was very intersting study since if we only glanced at the mean values we could conclude the length of the chopsticks effects food punching efficiency while it was not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####References:\n",
+    "\n",
+    "https://www.udacity.com/course/intro-to-inferential-statistics--ud201\n",
+    "\n",
+    "http://www.randalolson.com/2012/08/06/statistical-analysis-made-easy-in-python/\n"
    ]
   }
  ],
