Rewrite the t_CI function

--- a/Test_a_perceptual_phenomenon.ipynb
+++ b/Test_a_perceptual_phenomenon.ipynb
@@ -640,28 +640,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "data = stroop_data\n",
-    "t critical value = -1.684, + 1.684 at 95% confidence # one tailed t-test at df = 46\n",
-    "def CI(data):\n",
-    "    std1 = data['Congruent'].std()\n",
-    "    std2 = data['Incongruent'].std()\n",
-    "    mean1 = data['Congruent'].mean()\n",
-    "    mean2 = data['Incongruent'].mean()\n",
-    "    se = np.sqrt((std1**2 + std2**2)/24) # standard of error\n",
-    "    CI1 = (mean1 - mean2) - 2.021*se\n",
-    "    CI2 = (mean1 - mean2) + 2.021*se\n",
-    "    print [CI1, CI2]\n"
+    "#t critical value = -1.714 at 95% confidence # one tailed t-test at df = 23\n",
+    "def t_CI(data):\n",
+    "    mean_dif = (data['Congruent'] - data['Incongruent']).mean()\n",
+    "    std_dif = (data['Congruent'] - data['Incongruent']).std()\n",
+    "    se = std_dif/np.sqrt(24) # standard of error\n",
+    "    t = mean_dif/se\n",
+    "    print t\n",
+    "    CI1 = mean_dif - 1.714*se #Confidence interval\n",
+    "    CI2 = mean_dif + 1.714*se\n",
+    "    print [CI1, CI2]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 204,
    "metadata": {
     "collapsed": false
    },
@@ -670,18 +671,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-10.429002710854943, -5.5005806224783864]\n"
+      "-8.02070694411\n",
+      "[-9.6668427466767426, -6.2627405866565908]\n"
      ]
     }
    ],
    "source": [
-    "confidence_interval = CI(stroop_data)\n",
-    "confidence_interval"
+    "t_CI(stroop_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The t statistic value was -8.021 and confidence interval was [-9.67 , -6.26] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 192,
    "metadata": {
     "collapsed": false
    },
@@ -695,6 +703,7 @@
     }
    ],
    "source": [
+    "# We also can import the function from scipy and get the same t value\n",
     "from scipy import stats\n",
     "a = stroop_data['Congruent']\n",
     "b = stroop_data['Incongruent']\n",
@@ -704,10 +713,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.1699407959570778"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calculate the size effect Cohen'd\n",
+    "d = -8.02071/np.sqrt(47)\n",
+    "d"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The t statistic value was -8.021 was much less than t critical value of -1.684. The p value of 4.103e-08 much smaller than 0.05. Therefore, we could reject the null hypothesis. We can conclude that the time it takes to name the ink colors for congruent words was statiscally significant less than for incongruent words conditions. The results matched up with our expectations."
+    "t(23) = -8.02, p <.005, d = -1.17\n",
+    "The t statistic value was -8.021 was less than t critical value of -1.714. The p value of 4.103e-08 was smaller than 0.05. Therefore, we could reject the null hypothesis. We can conclude that the time it takes to name the ink colors for congruent words was statiscally significant less than for incongruent words conditions. The results matched up with our expectations."
    ]
   },
   {
