--- a/Test_a_perceptual_phenomenon.ipynb
+++ b/Test_a_perceptual_phenomenon.ipynb
@@ -308,7 +308,7 @@
    "source": [
     "The data has two set of samples and we do not know population parameters such as mean and variance. Therefore, t-test is the best statistical test assuming the data was random sampled and normal distributed. Since our participants were measured at two time points we use paired t-test for two related samples. \n",
     "\n",
-    "We could use two tailed paired t-test for this task. However, given the information that in the incougruent words conditions the participants had to say out loud the color of the words that doesn't match its ink color. It seems harder job. My test results were: 10.39s and 20.85s for congruent and incongruent, respectively. So, we use one tailed paired t-test for this task with the following hypotheses:\n",
+    "We could use two tail paired t-test for this task. However, given the information that in the incougruent words conditions the participants had to say out loud the color of the words that doesn't match its ink color. It seems harder job. My test results were: 10.39s and 20.85s for congruent and incongruent, respectively. So, we use one tail paired t-test for this task with the following hypotheses:\n",
     "\n",
     "Ho = The mean times to name the ink colors in equally-sized lists of words are the same at an alpha of .05.\n",
     "\n",
