Add ttest functions

--- a/Test_a_perceptual_phenomenon.ipynb
+++ b/Test_a_perceptual_phenomenon.ipynb
@@ -694,6 +694,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-8.020706944109957, 4.1030005857111781e-08)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Double check results with Welch's t-Test\n",
+    "import scipy.stats\n",
+    "scipy.stats.ttest_rel(data['Congruent'], data['Incongruent']) \n",
+    "# p value of our test is p result divides by 2 since our t-test is one tail. "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
