--- a/Test_a_perceptual_phenomenon.ipynb
+++ b/Test_a_perceptual_phenomenon.ipynb
@@ -437,6 +437,7 @@
    },
    "outputs": [],
    "source": [
+    "# Distribution plot with fitting curve\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
@@ -664,7 +665,7 @@
     "    mean_dif = (data['Congruent'] - data['Incongruent']).mean()\n",
     "    std_dif = (data['Congruent'] - data['Incongruent']).std()\n",
     "    se = std_dif/np.sqrt(24) # standard of error\n",
-    "    t = mean_dif/se\n",
+    "    t = mean_dif/se # t value\n",
     "    print t\n",
     "    print mean_dif\n",
     "    CI = mean_dif + 1.714*se #Confidence interval\n",
@@ -770,7 +771,7 @@
    "source": [
     "When the participants only had to read the words which names match the colors, their brains only need to work on reading the word and say out loud. Meanwhile, when they had to read the words which names does not match the colors, they have to say out loud the color without be interfered with the meaning of the words. The second task leads to more mistakes and longer time to achieve.\n",
     "\n",
-    "Another interesting example about how our brain works is a game call \"Follow my instructions\". Test person tells participants to do something like \"Put your hand on your shoulder!\" but the test person put her hand on her head. Many people just see it and do the same as the test person while they are supposed to do what she says. Our brain works quicker with automate reading and automate seeing but slower with interpretating the meaning. \n",
+    "Another interesting example about how our brain works is a game call \"Follow my instructions\". Test person tells participants to do something like \"Put your hand on your shoulder!\" but the test person put her hand on her head. Many people just see it and do the same as the test person while they are supposed to do what she says. However, there are few people who focus on what she says will do much better. Our brain works quicker with automate reading and automate seeing but slower with interpretating their meaning to us. In order to make our brain works effectively, we need to filter distractions and pay attention to our goals.   \n",
     "\n"
    ]
   },
